--- a/teste06/index.html
+++ b/teste06/index.html
@@ -56,6 +56,8 @@
 
     <footer>
         <p>Desenvolvido por Paulo</p>
+        <p class="redes">Me siga nas redes sociais</p>
+        <img src="imagens/Design sem nome (1).png" alt="Icone instagram">
     </footer>
     
 
