--- a/teste06/index.html
+++ b/teste06/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="menu">
-        <h1>FLY FIT</h1>
+        <h1>PowerFit</h1>
     </header>
 
     <nav >
@@ -57,7 +57,6 @@
     <footer>
         <p>Desenvolvido por Paulo</p>
         <p class="redes">Me siga nas redes sociais</p>
-        <img src="imagens/Design sem nome (1).png" alt="Icone instagram">
     </footer>
     
 
